k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-api
  namespace: websocket-example
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: "github-gcr"
      serviceAccountName: websocket-api-service-account
      automountServiceAccountToken: true
      containers:
      - name: api
        image: ghcr.io/public-sysunicorns-info/websocket-api:main
        ports:
        - name: http-port
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "100Mi"
            cpu: "250m"
        volumeMounts:
          - name: redis-password
            mountPath: "/var/run/secrets/redis"
            readOnly: true
        # livenessProbe:
        #   httpGet:
        #     path: /api/health/liveness
        #     port: http-port
        #   periodSeconds: 2
        #   terminationGracePeriodSeconds: 60
        # readinessProbe:
        #   httpGet:
        #     path: /api/health/readiness
        #     port: http-port
        #   initialDelaySeconds: 2
        #   periodSeconds: 2
      volumes:
        - name: redis-password
          secret:
            secretName: redis
            items:
              - key: redis-password
                path: password
